Firefox spacing issue with Logs and Scroll position with DV fixed

--- a/src/app/application/deployment-verification/deployment-verification.component.less
+++ b/src/app/application/deployment-verification/deployment-verification.component.less
@@ -48,7 +48,7 @@
 }
 
 .example-sidenav-content {
-  display: flex;
+  // display: flex;
   height: 100%;
   align-items: center;
   justify-content: flex-end;
